public/stylesheets/htwplus.css
/* ... */
#hp-new-comment-content:focus,
#hp-new-post-content:focus {
	height: 104px;
}

.hp-comments {
	margin-left: 50px;
}

@media (max-width: 767px) {
    .hp-comments {
        margin-left: 15px;
    }
}

.hp-comment-form {
	margin-top: 15px;
}

.hp-post-form label,
.hp-comment-form label {
	display: none;
}

.hp-post-form dl, dd,
.hp-comment-form dl, dd {
	margin: 0;
}

.media-heading .popover  {
	font-size: 11px;
    font-weight: normal;
    line-height: 16px;
}

.well {
	padding: 15px;
	margin-bottom: 0px;
}
.well.broadcast {
    border: 1px solid #76b900;
}

.media small {
	color: #999999;
}

.media-heading a[data-toggle = 'modal'] {
	position: absolute;
	margin-left: 5px; 
}

.hp-postLink {
	color: #0082D1;
}

.hp-postLink .glyphicon,
.hp-postLink .glyphicon:hover {
    color: inherit;
    text-decoration: inherit;
    top: 0;
}

/*============================== Avatare ==============================*/

#hp-avatars img {
	margin-bottom: 8px;
	margin-right: 8px;
	width: 64px;
}

#hp-avatars img:hover {
	border-color: #5a5858;
}

#hp-avatars img.active {
  border-color: rgba(255, 95, 0, 0.8);
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 95, 0, .6);
  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 95, 0, .6);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 95, 0, .6);
}

.hp-avatar {
	width: 120px;
	height: 120px;
}

#hp-navbar .hp-avatar {
	height: 32px;
	width: 32px;
}

@media (max-width: 350px) {
    .hp-nav li > a {
        padding-left: 10px;
        padding-right: 10px;
    }
}

dl .hp-avatar {
	width: 80px;
	height: 80px;
}

.media .hp-avatar,
table .hp-avatar {
	width: 25px;
	height: 25px;
}

table .hp-avatar {
	margin-bottom: -4px;
    margin-top: -4px;
}

/*============================== Token ==============================*/

#token-input {
	display:none;
}

/*============================== Ajax ==============================*/

.loading {
	background-image: url(../images/loading.gif);
	width: 16px;
	height: 16px;
	vertical-align: middle;
	margin-right: 8px;
	background-size: 100%;
	display: none;
}

.loading#loadingMedia{
	vertical-align: top;
}

#loading-active {
	background-image: url(../images/loading.gif);
	width: 16px;
	height: 16px;
	background-size: 100%;
}

#fileupload-status {
	display: none;
}

/*============================== Options Menu ==============================*/

.hp-optionsMenu {
    position: relative;
    overflow: visible;
    padding: 0!important;
}

.hp-optionsMenu .dropdown-menu {
    background-color: #5a5858;
    color: white;
    opacity: 0.93;
    margin-top: 2px;
    padding: 8px 13px;
    float: none;
    right: 0;
    left: auto;
    min-width: initial;
}

.hp-optionsMenu .dropdown {
    position: inherit;          /* dropdown-menu must be positioned absolute to the content */
}

.hp-optionsMenu .open>.dropdown-menu {
    display: flex;
}

@media (max-width: 767px) {
    .hp-optionsMenu .open>.dropdown-menu {
        display: block;
        right: 14px;
        left: 38px;
        text-align: center;
        border-radius: 0;
    }

    .hp-optionsMenu .open>.dropdown-menu li{
        display: inline-block;
        float: none;
    }
}

.hp-optionsMenu .dropdown-menu a {
    background-color: #5a5858;
    color: white;
    text-align: center;
    font-size: 11px;
    padding-left: 10px;
    padding-right: 10px;
}

.hp-optionsMenu .dropdown-menu a > .glyphicon {
    font-size: 15px;
    color: inherit;
}

.hp-optionsMenu .dropdown-menu a:hover,
.hp-optionsMenu .dropdown-menu a:focus {
    background-color: inherit;
    color: #76B900;
}

.hp-optionsMenu .dropdown-toggle {
    cursor: pointer;
}

.hp-optionsMenu .dropdown-toggle > .glyphicon {
    width: 100%;
    text-align: center;
    line-height: 31px;
}

.hp-optionsMenu .dropdown-toggle > .glyphicon-chevron-up {
    color: #76B900;
}

.hp-optionsTable > tr:hover .dropdown-toggle > .glyphicon {
    color: #76B900
}

